# peppy

./: LICENSE  README.md  pyproject.toml
examples/: helloworld.ppd  unit_test.bat
peppy/: compiler.py  main.py  vm.py
peppy_esolang/: compiler.py  main.py  vm.py
