[tool.poetry]
name = "peppy"
version = "0.1.0"
description = "A Python implementation of the pepp*erdine esoteric programming language"
authors = ["brody maddox <brodyfmaddox@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
peppy = "peppy.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"